--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   provider: ^6.1.5
   tesseract_ocr: ^0.5.0
   image_picker: ^1.1.2
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
