--- a/flutter_application_1/android/app/src/main/AndroidManifest.xml
+++ b/flutter_application_1/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- App Permissions IMPORTANT -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:label="flutter_application_1"
         android:name="${applicationName}"
