--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   tesseract_ocr: ^0.5.0
   image_picker: ^1.1.2
   clipboard: ^0.1.3
+  # storage system
+  path_provider: ^2.1.2
+  path: ^1.8.3
+  # text recognition
+  google_mlkit_text_recognition: ^0.15.0
 
 dev_dependencies:
   flutter_test:
