--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   image_picker: ^1.1.2
   clipboard: ^0.1.3
   # storage system
+  shared_preferences: ^2.5.3
+  json_annotation: ^4.8.1
   path_provider: ^2.1.2
   path: ^1.8.3
   # text recognition
